<resources>
    <string name="app_name">JetPack Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gtOtp">Get OTP</string>
    <string name="emailTxt">Enter Your Email..</string>
    <string name="email">Email</string>
    <string name="otpTxt">Enter the OTP received at Email:\n\n%1$s</string>
    <string name="nullTxt"></string>
    <string name="chkOtp">Check OTP</string>
    <string name="bodyTxt">OTP for verification is : %1$s</string>
    <string name="enter_otp">"Enter Correct OTP..\u00A0\u00A0"</string>
    <string name="e_password">Enter Password</string>
    <string name="r_password">Re-Enter Password</string>
    <string name="update">Update</string>
</resources>